# NewNewBigEastFFL

./: .dockerignore  .gitignore  CLAUDE.md  errors.md  memory.md  railway.json
fantasy-analyzer/: Dockerfile  config.yaml  pyproject.toml  railway.json  requirements.txt  streamlit_app.py
fantasy-analyzer/backend/: main.py
fantasy-analyzer/backend/routers/: calendar.py  db.py  draft.py  h2h.py  history.py  in_season.py  owner.py  transactions.py
fantasy-analyzer/data/: league.db
fantasy-analyzer/fantasy_analyzer/: cli.py  ingest.py
fantasy-analyzer/fantasy_analyzer/analysis/: calendar_events.py  draft.py  dynasty_rankings.py  history.py  power_rankings.py  rivalries.py  roster_quality.py  start_sit.py  transactions.py
fantasy-analyzer/fantasy_analyzer/api/: models.py  sleeper.py
fantasy-analyzer/fantasy_analyzer/db/: schema.py  store.py
fantasy-analyzer/fantasy_analyzer/rankings/: __init__.py  dynasty_sources.py  player_aliases.json  player_matching.py
fantasy-analyzer/fantasy_analyzer/reports/: export.py  terminal.py
fantasy-analyzer/fantasy_analyzer/scraping/: dynastyprocess.py  fantasycalc.py  fantasypros.py  ktc.py  pick_names.py
fantasy-analyzer/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
fantasy-analyzer/frontend/src/: App.jsx  index.css  main.jsx
fantasy-analyzer/frontend/src/components/: DataTable.jsx  LoadingSpinner.jsx  NavBar.jsx  PowerRankingsExplainer.jsx  Tabs.jsx  (+1 more)
fantasy-analyzer/tests/: test_analysis.py  test_api.py  test_dynasty_rankings.py  test_league_records.py  test_start_sit.py
(+18 files in other folders)
